--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ ifdef::env-github[]
 :caution-caption: :fire:
 :important-caption: :exclamation:
 :note-caption: :paperclip:
-:tip-caption: :bulb:
+:tip-caption: :bulb;
 :warning-caption: :warning:
 endif::[]
 
